--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+button {
+    font-family: 'Poppins', sans-serif;
+}
+
 header {
     display: flex;
     width: 90%; /*deixa um espaço a direita e a esquerda*/
@@ -67,11 +71,47 @@ justify-content: flex-end; /*coloca o carrinho no fim ao lado esquerdo*/
 .intro-text h1 {
     font-size: 44px;
     font-weight: 500;
+    background: linear-gradient(to right, #494964, #6f6f89);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
+
+.intro-text p {
+    margin-top: 5px;
+    font-size: 22px;
+    color: #585772;
+}
+
+.cta {
+    padding: 50px 0px 0px 0px;
+}
+
+.cta-select {
+    border: 2px solid #c36cbb;
+    background: transparent;
+    color: #c36cbb;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.cta-add {
+    background: #c36cbb;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    color: white;
+    margin: 30px 0px 0px 30px;
+}
+
 .cover {
     flex: 1;
 }
 
 .cover img {
     height: 60vh;
+    filter: drop-shadow(0px 5px 3px black); /*coloca sobre embaixo de uma imagem*/
 }
