--- a/public/style.css
+++ b/public/style.css
@@ -167,7 +167,57 @@ justify-content: flex-end; /*coloca o carrinho no fim ao lado esquerdo*/
         opacity: 1;
         transform: translateY(0px);
     }
-} 
+}
+
+
+/*not-found*/
+.header-text{
+    font-family: 'Inconsolata',
+    monospace;
+    font-weight: 800;
+    letter-spacing: -2px;
+    padding: 20px 0 0 40px;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-col,.right-col {
+    flex-basis: 50%;
+}
+.left-col img{
+    margin-top: 50px;
+    padding: 40px;
+    width: 85%;
+}
+.text{
+    max-width: 600px;
+}
+h1 {
+    font-size: 50px;
+    font-weight: bold;
+
+}
+p {
+    width: 381px;
+    margin-top: 25px;
+    font-weight: normal;
+    font-size: 20px;
+}
+.btn {
+    background-color: #333333;
+    color: #ffffff;
+    margin-top: 30px;
+    padding: 15px 23px;
+    outline: none;
+    border: none;
+    font-size: 10px;
+    cursor: pointer;
+}
+
 
 
 /*==responsividade com media queries*/
