--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"><!--Estilo da fonte-->
     <meta http-equiv="X-UA-Compatible" content="IE=7">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Landing Page</title>
 </head>
 <body>
