--- a/views/not-found.html
+++ b/views/not-found.html
@@ -3,31 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-     <header class="header-text">
-            <h2>404 NOT FOUND</h2>
-        </header>
-        <section class="container">
-            <div class="left-col">
-                <img src="Scarecrow.png" alt="">
-            </div>
-            <div class="left-col">
-                <div class="text">
-                    <h1>I have bad news for you</h1>
-                    <p>The Page You are looking for might be removed or it is temporarily unavailable</p>
-                    <button class="btn">BACK TO HOMEPAGE</button>
-                </div>
-            </div>
-        </section><br>
-        
-
-    
-
-
-
-        
-        <script src="" async defer></script>
+    <div class="container">
+        <h2>Oops! Page not found</h2>
+        <h1>404</h1>
+        <p>We can not find the page you are looking for.</p>
+        <a href="/">Go back home</a>
+    </div>
 </body>
 </html>
